Added new UI for Choosing Station and Passengers

--- a/DeutscheBahn/DeutscheBahn.vbproj
+++ b/DeutscheBahn/DeutscheBahn.vbproj
@@ -87,6 +87,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="book_form.Designer.vb">
+      <DependentUpon>book_form.vb</DependentUpon>
+    </Compile>
+    <Compile Include="book_form.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -111,6 +117,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="book_form.resx">
+      <DependentUpon>book_form.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
     </EmbeddedResource>
