--- a/DeutscheBahn/DeutscheBahn.vbproj
+++ b/DeutscheBahn/DeutscheBahn.vbproj
@@ -62,6 +62,7 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data, Version=8.0.13.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -93,6 +94,7 @@
     <Compile Include="book_form.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="DBCon.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
