Added Data Reading inside a table k thanks

--- a/DeutscheBahn/DeutscheBahn.vbproj
+++ b/DeutscheBahn/DeutscheBahn.vbproj
@@ -102,6 +102,12 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="crud.Designer.vb">
+      <DependentUpon>crud.vb</DependentUpon>
+    </Compile>
+    <Compile Include="crud.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="login.Designer.vb">
       <DependentUpon>login.vb</DependentUpon>
     </Compile>
@@ -130,6 +136,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="crud.resx">
+      <DependentUpon>crud.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="login.resx">
       <DependentUpon>login.vb</DependentUpon>
