--- a/DeutscheBahn/DeutscheBahn.vbproj
+++ b/DeutscheBahn/DeutscheBahn.vbproj
@@ -129,6 +129,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="train_result.Designer.vb">
+      <DependentUpon>train_result.vb</DependentUpon>
+    </Compile>
+    <Compile Include="train_result.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="book_form.resx">
@@ -148,6 +154,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="train_result.resx">
+      <DependentUpon>train_result.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
