--- a/DeutscheBahn/DeutscheBahn.vbproj
+++ b/DeutscheBahn/DeutscheBahn.vbproj
@@ -74,41 +74,8 @@
       <HintPath>..\packages\Common.Logging.Core.3.4.1\lib\net40\Common.Logging.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="itext.barcodes, Version=7.1.4.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
-      <HintPath>..\packages\itext7.7.1.4\lib\net40\itext.barcodes.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="itext.forms, Version=7.1.4.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
-      <HintPath>..\packages\itext7.7.1.4\lib\net40\itext.forms.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="itext.io, Version=7.1.4.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
-      <HintPath>..\packages\itext7.7.1.4\lib\net40\itext.io.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="itext.kernel, Version=7.1.4.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
-      <HintPath>..\packages\itext7.7.1.4\lib\net40\itext.kernel.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="itext.layout, Version=7.1.4.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
-      <HintPath>..\packages\itext7.7.1.4\lib\net40\itext.layout.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="itext.pdfa, Version=7.1.4.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
-      <HintPath>..\packages\itext7.7.1.4\lib\net40\itext.pdfa.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="itext.sign, Version=7.1.4.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
-      <HintPath>..\packages\itext7.7.1.4\lib\net40\itext.sign.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="itext.styledxmlparser, Version=7.1.4.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
-      <HintPath>..\packages\itext7.7.1.4\lib\net40\itext.styledxmlparser.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="itext.svg, Version=7.1.4.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
-      <HintPath>..\packages\itext7.7.1.4\lib\net40\itext.svg.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="itextsharp">
+      <HintPath>C:\Users\X453SA\Documents\Visual Studio 2015\Projects\DeutscheBahn\DeutscheBahn\ref\itextsharp.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=8.0.13.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
@@ -184,6 +151,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="savedrd.vb" />
+    <Compile Include="success_page.Designer.vb">
+      <DependentUpon>success_page.vb</DependentUpon>
+    </Compile>
+    <Compile Include="success_page.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="train_result.Designer.vb">
       <DependentUpon>train_result.vb</DependentUpon>
     </Compile>
@@ -212,6 +185,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PassengerDetail.resx">
       <DependentUpon>PassengerDetail.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="success_page.resx">
+      <DependentUpon>success_page.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="train_result.resx">
       <DependentUpon>train_result.vb</DependentUpon>
